--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <body>
     <div class="center">
         <p>
-            Nicole He is a human being and a graduate student at <a href="http://itp.nyu.edu">NYU's Interactive Telecommunications Program</a>, learning art and code. Before this, she had a community-building and public speaking job at <a href="http://kickstarter.com">Kickstarter</a>. Before that, she was a baby. Nicole enjoys burrata, Dungeons & Dragons, weightlifting, and long walks on the beach, but only via computer screen.
+            Nicole He is a human being and a graduate student at <a href="http://itp.nyu.edu">NYU's Interactive Telecommunications Program</a>, learning art and code. Before this, she had a community-building and public speaking job at <a href="http://kickstarter.com">Kickstarter</a>. Before that, she was a baby. Nicole enjoys burrata, Dungeons & Dragons, weightlifting, and long walks on the beach at dusk, but only via computer screen.
             <br>
             <br>~ <a href="http://nicole.pizza/itp">ITP schoolwork blog</a>
             <br>~ <a href="http://twitter.com/nicolehe">Twitter</a>
@@ -54,7 +54,6 @@
             <br>~ <a href="http://github.com/nicolehe">Github</a></p>
     </div>
     <script>
-    < p style = "position: absolute; left: 22%; top: 540px;" >
         (function(i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
             i[r] = i[r] || function() {
