--- a/index.html
+++ b/index.html
@@ -41,18 +41,6 @@
         top: 540px;
     }
     </style>
-</head>
-
-<body>
-    <div class="center">
-        <p>
-            Nicole He is a human being and a graduate student at <a href="http://itp.nyu.edu">NYU's Interactive Telecommunications Program</a>, learning art and code. Before this, she had a community-building and public speaking job at <a href="http://kickstarter.com">Kickstarter</a>. Before that, she was a baby. Nicole enjoys burrata, Dungeons & Dragons, weightlifting, and long walks on the beach at dusk, but only via computer screen.
-            <br>
-            <br>~ <a href="http://nicole.pizza/itp">ITP schoolwork blog</a>
-            <br>~ <a href="http://twitter.com/nicolehe">Twitter</a>
-            <br>~ <a href="http://instagram.com/nicolehe">Instagram</a>
-            <br>~ <a href="http://github.com/nicolehe">Github</a></p>
-    </div>
     <script>
         (function(i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
@@ -69,6 +57,23 @@
     ga('create', 'UA-67795211-1', 'auto');
     ga('send', 'pageview');
     </script>
+</head>
+
+<body>
+    <div class="center">
+        <p>
+            Nicole He is a human being and a graduate student at <a href="http://itp.nyu.edu">NYU's Interactive Telecommunications Program</a>, learning art and code. Before this, she had a community-building and public speaking job at <a href="http://kickstarter.com">Kickstarter</a>. Before that, she was a baby. Nicole enjoys burrata, Dungeons & Dragons, weightlifting, and long walks on the beach at dusk, but only via computer screen.
+            <br>
+            <br>// <a href=mailto:nicole.he@nyu.edu>email</a> 
+            <br>/// <a href="http://github.com/nicolehe">github</a> 
+            <br>//// <a href="http://twitter.com/nicolehe">twitter</a>
+            <br>///// <a href="http://instagram.com/nicolehe">instagram</a>
+            <br>////// <a href="http://nicole.pizza/itp">ITP stuff blog</a>
+
+
+
+        </p>
+    </div>
 </body>
 
 </html>
