--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
     <script src="libraries/p5.js" type="text/javascript"></script>
     <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet' type='text/css'>
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
-    <script src="libraries/p5.sound.js" type="text/javascript"></script>
     <script src="sketch.js" type="text/javascript"></script>
     <link href="http://nicole.pizza/img/favicon.ico" rel="icon" type="image/x-icon" />
     <style>
     body {
         padding: 5px;
         margin: 0;
-        font-family: 'Dosis', sans-serif;
+        font-family: 'Dosis', serif;
         color: #000000;
         font-size: 12pt;
     }
@@ -42,17 +41,17 @@
     }
     </style>
     <script>
-        (function(i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function() {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+    (function(i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function() {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
     ga('create', 'UA-67795211-1', 'auto');
     ga('send', 'pageview');
@@ -64,14 +63,11 @@
         <p>
             Nicole He is a human being and a graduate student at <a href="http://itp.nyu.edu">NYU's Interactive Telecommunications Program</a>, learning art and code. Before this, she had a community-building and public speaking job at <a href="http://kickstarter.com">Kickstarter</a>. Before that, she was a baby. Nicole enjoys burrata, Dungeons & Dragons, weightlifting, and long walks on the beach at dusk, but only via computer screen.
             <br>
-            <br>// <a href=mailto:nicole.he@nyu.edu>email</a> 
-            <br>/// <a href="http://github.com/nicolehe">github</a> 
+            <br>// <a href=mailto:hi@nicole.pizza>email</a>
+            <br>/// <a href="http://github.com/nicolehe">github</a>
             <br>//// <a href="http://twitter.com/nicolehe">twitter</a>
             <br>///// <a href="http://instagram.com/nicolehe">instagram</a>
             <br>////// <a href="http://nicole.pizza/itp">ITP stuff blog</a>
-
-
-
         </p>
     </div>
 </body>
