--- a/index.html
+++ b/index.html
@@ -61,13 +61,14 @@
 <body>
     <div class="center">
         <p>
-            Nicole He is a human being and a graduate student at <a href="http://itp.nyu.edu">NYU's Interactive Telecommunications Program</a>, learning art and code. Before this, she had a community-building and public speaking job at <a href="http://kickstarter.com">Kickstarter</a>. Before that, she was a baby. Nicole enjoys burrata, Dungeons & Dragons, weightlifting, and long walks on the beach at dusk, but only via computer screen.
+            <a href="http://nicole.pizza/img/nicole-he.jpg">Nicole He</a> is a human being and a graduate student at <a href="http://itp.nyu.edu">NYU's Interactive Telecommunications Program</a>, learning art and code. Before this, she had a community-building and public speaking job at <a href="http://kickstarter.com">Kickstarter</a>. Before that, she was a baby. Nicole enjoys burrata, Dungeons & Dragons, weightlifting, and long walks on the beach at dusk, but only via computer screen.
             <br>
             <br>// <a href=mailto:hi@nicole.pizza>email</a>
             <br>/// <a href="http://github.com/nicolehe">github</a>
             <br>//// <a href="http://twitter.com/nicolehe">twitter</a>
-            <br>///// <a href="http://instagram.com/nicolehe">instagram</a>
-            <br>////// <a href="http://nicole.pizza/itp">ITP stuff blog</a>
+            <br>///// <a href="http://nicole.pizza/projects">projects</a>
+            <br>////// <a href="http://instagram.com/nicolehe">instagram</a>
+            <br>/////// <a href="http://nicole.pizza/itp">ITP stuff blog</a>
         </p>
     </div>
 </body>
