added stuff to portfolio

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -78,6 +78,12 @@
     <div class="center">
         <h1> Projects </h1>
         <p align="center">
+            <img src="http://nicole.pizza/img/cat-petting.jpg" width=600></p>
+        </p>
+        <p>
+            <a href="http://nicole.pizza/unfamiliar-cat-petting-simulator">Unfamiliar Cat Petting Simulator</a> is a game about the challenges of petting a cat you've never met before.
+        </p>
+        <p>
             <img src="http://nicole.pizza/img/soylent-dick-nicole-big.gif"></p>
         <p>
             <a href="http://nicole.pizza/soylent-dick">Soylent Dick</a> is a phallus made out of Soylent that ejaculates Soylent when you type self-validating praise for Soylent into the browser.</p>
