changed the way i described myself lol

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <body>
     <div class="center">
         <p>
-            <a href="http://nicole.pizza/img/nicole-he.jpg">Nicole He</a> is a human being and a graduate student at <a href="http://itp.nyu.edu">NYU's Interactive Telecommunications Program</a>, learning art and code. Before this, she had a community-building and public speaking job at <a href="http://kickstarter.com">Kickstarter</a>. Before that, she was a baby. Nicole enjoys burrata, Dungeons & Dragons, weightlifting, and long walks on the beach at dusk, but only via computer screen.
+            <a href="http://nicole.pizza/img/nicole-he.jpg">Nicole He</a> is a programmer and artist and a graduate student at <a href="http://itp.nyu.edu">NYU's Interactive Telecommunications Program</a>. Before this, she had a community-building and public speaking job at <a href="http://kickstarter.com">Kickstarter</a>. Before that, she was a baby. Nicole enjoys burrata, Dungeons & Dragons, weightlifting, and long walks on the beach at dusk, but only via computer screen.
             <br>
             <br>// <a href=mailto:hi@nicole.pizza>email</a>
             <br>/// <a href="http://github.com/nicolehe">github</a>
